fix: hero left column vertical alignment

--- a/src/style.css
+++ b/src/style.css
@@ -260,7 +260,7 @@ a {
 }
 
 .home-header {
-  padding-top: 80px !important;
+  padding-top: 0px !important;
 }
 
 .home-section {
